test/files/neg/typemacros-in-refinements.check
typemacros-in-refinements.scala:9: error: only declarations allowed here
  type X = { type Foo = macro Impls.impl }
                  ^
one error found
